<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_lbl_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/please_enter_your_password"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorWhite"
            android:paddingBottom="3dp">

            <EditText
                android:id="@+id/id_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:gravity="center"
                android:inputType="textPassword"
                android:letterSpacing="0.2"
                android:padding="5dp"
                android:textColor="@color/colorWhite"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fingerlyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:paddingBottom="3dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:padding="5dp"
                android:text="@string/use_fingerprint"
                android:textColor="@color/md_yellow_A700"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/id_one"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:text="@string/one"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/id_two"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:text="@string/two"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/id_three"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:text="@string/three"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/id_four"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:text="@string/four"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/id_five"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:text="@string/five"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/id_six"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:text="@string/six"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/id_seven"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:text="@string/seven"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/id_eight"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:text="@string/eight"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/id_nine"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:text="@string/nine"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/id_cancel"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <Button
                android:id="@+id/id_zero"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:text="@string/zero"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/id_delete"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:padding="25dp"
                android:src="@android:drawable/ic_input_delete"

                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>