<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Activites.Form.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".Activites.Form.Login">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/lock" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="12dp"
            android:text="Login"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/email"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_email"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_bg_greay"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="45dp"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/password"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_bg_greay"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="45dp"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_rounded_primary"
                android:fontFamily="sans-serif"
                android:text="submit"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

        </RelativeLayout>

        <TextView
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="Forgot Password ?"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:orientation="vertical">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />
            <!--   <ImageView
                   android:id="@+id/img_fb"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:layout_marginLeft="80dp"
                   android:src="@drawable/facebook" />

               <ImageView
                   android:id="@+id/img_google"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:layout_marginLeft="50dp"
                   android:src="@drawable/google_plus" />-->


        </LinearLayout>

        <TextView
            android:id="@+id/skip_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:onClick="skipLogin"
            android:text="Skip"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_60"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/dont_have_account"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvreg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:fontFamily="sans-serif"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/title_activity_register"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>